# magtest

./: .gitignore  CMakeLists.txt  gitignore
tpc/magma-2.6.2/: CMake.src.cuda  CMake.src.hip  CMakeLists.txt  Makefile.gen.cuda  Makefile.gen.hip
tpc/magma-2.6.2/blas_fix/: Makefile.src
tpc/magma-2.6.2/control/: Makefile.src  abs.cpp  affinity.cpp  affinity.h  auxiliary.cpp  batched_kernel_param.h  connection_mgpu.cpp  cpanel_to_q.cpp  cprint.cpp  dpanel_to_q.cpp  dprint.cpp  get_batched_crossover.cpp  get_batched_gemm_decision.cpp  get_nb.cpp  get_ntcol.cpp  magma.F90  magma_bulge.cpp  magma_cauxiliary.cpp  magma_cbulge.cpp  magma_cnan_inf.cpp  magma_dauxiliary.cpp  magma_dbulge.cpp  magma_dnan_inf.cpp  magma_f77.cpp  magma_internal.h  magma_param.F90  magma_sauxiliary.cpp  magma_sbulge.cpp  magma_snan_inf.cpp  magma_threadsetting.cpp  magma_threadsetting.h  magma_timer.cpp  magma_timer.h  magma_winthread.cpp  magma_winthread.h  magma_yield.cpp  magma_zauxiliary.cpp  magma_zbulge.cpp  magma_zf77pgi.cpp  magma_znan_inf.cpp  (+10 more)
tpc/magma-2.6.2/docs/: documentation.txt
tpc/magma-2.6.2/fortran/: magma2.F90
tpc/magma-2.6.2/include/: Makefile.src  magma.h  magma_auxiliary.h  magma_batched.h  magma_bulge.h  magma_c.h  magma_cbatched.h  magma_cbulge.h  magma_cbulgeinc.h  magma_cgehrd_m.h  magma_clapack.h  magma_config.h.in  magma_copy.h  magma_copy_v1.h  magma_cvbatched.h  magma_d.h  magma_dbatched.h  magma_dbulge.h  magma_dbulgeinc.h  magma_dgehrd_m.h  magma_dlapack.h  magma_ds.h  magma_dvbatched.h  magma_hbatched.h  magma_htc.h  magma_lapack.h  magma_mangling.h  magma_s.h  (+40 more)
(+2774 files in other folders)
